# THU-TOMO

./: .gitignore  CMakeLists.txt  Makefile.inc  README.md  TomoConfig.h.in
cmake/: BuildFFTW.cmake
conf/: para.conf  para_alignment.conf  para_bin.conf  para_combine.conf  para_ctf_model.conf  para_extract.conf  para_flipyz.conf  para_normalize.conf  para_reconstruction_SIRT.conf  para_reconstruction_SIRT_fun30.conf  para_reconstruction_WBP.conf  para_reconstruction_WBP_fun30.conf  para_reconstruction_WBP_sim.conf
lib/: libconfuse.la  libconfuse.so.2.0.0
lib/pkgconfig/: libconfuse.pc
src/core/: AlignmentAlgo.cpp  AlignmentBase.cpp  CTF.cpp  CTFAlgo.cpp  CTFBase.cpp  Makefile  ReconstructionAlgo_SIRT.cpp  ReconstructionAlgo_SIRT_RAM.cpp  ReconstructionAlgo_WBP.cpp  ReconstructionAlgo_WBP_RAM.cpp  ReconstructionBase.cpp  amoeba.cpp  amotry.cpp  golden.cpp  mnbrak.cpp  mrc.cpp  track.cpp
src/gpu/include/: GPUKernel.cuh  alignment.h  bin.h  common.h  low_pass.h  sumArray.h  volumeProj.cuh  wbp.h
src/gpu/interface/: GPUInterface.cpp  GPUInterface.h
src/gpu/src/: GPUKernel.cu  alignment.cu  bin.cu  low_pass.cu  sumArray.cu  volumeProj.cu  wbp.cu
src/include/: AlignmentAlgo.h  AlignmentBase.h  CTF.h  CTFAlgo.h  CTFBase.h  ReconstructionAlgo_SIRT.h  ReconstructionAlgo_SIRT_RAM.h  ReconstructionAlgo_WBP.h  ReconstructionAlgo_WBP_RAM.h  ReconstructionBase.h  fftw3_prep.h  mrc.h  nr.h  nrutil_nr.h  track.h  util.h
src/main/: GPU_test.cpp  Makefile  gputest.cpp  tomo.cpp  tomo_bin.cpp  tomo_combine.cpp  tomo_ctf_model.cpp  tomo_extract.cpp  tomo_flipyz.cpp  tomo_normalize.cpp
src/tool/: Makefile  test.cpp
src/util/: Makefile  util.cpp
